Opening a testfile triggers an 'unreachable' assert in suclpt/paint code #124719

Closed
opened 2024-07-15 12:06:21 +02:00 by Bastien Montagne · 3 comments

System Information
Operating system: N/A
Graphics card: N/A

Blender Version
Broken: 4.3 current main
Worked: 4.2

Short description of error

Opening test file tests/data/modeling/weight-paint_test.blend triggers this assert:

Read blend: "/home/guest/blender/main/src/tests/data/modeling/weight-paint_test.blend"
Code marked as unreachable has been executed. Please report this as a bug.
Error found at source/blender/blenkernel/intern/paint.cc:754 in paint_brush_set_default_reference.
./bin/blender(__interceptor_backtrace+0x5b) [0x11a7d60b]
./bin/blender() [0x17126dca]
./bin/blender() [0x164a8447]
./bin/blender() [0x14296ffd]
./bin/blender() [0x14296db2]
./bin/blender() [0x17b40f3a]
./bin/blender() [0x17b206e7]
./bin/blender() [0x17877ccb]
./bin/blender() [0x1786c645]
./bin/blender() [0x1785ad35]
./bin/blender() [0x120dabd6]
./bin/blender() [0x17535ad1]
./bin/blender() [0x11b128cd]
./bin/blender() [0x11b126ba]
./bin/blender() [0x17194e7e]
./bin/blender() [0x11b11bf0]
/lib/x86_64-linux-gnu/libc.so.6(+0x27c8a) [0x7f0e29cd8c8a]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0x85) [0x7f0e29cd8d45]
./bin/blender() [0x11a37ee1]
BLI_assert failed: source/blender/blenkernel/intern/paint.cc:754, paint_brush_set_default_reference(), at '0'
  This line of code is marked to be unreachable.
Aborted
**System Information** Operating system: N/A Graphics card: N/A **Blender Version** Broken: 4.3 current main Worked: 4.2 **Short description of error** Opening test file `tests/data/modeling/weight-paint_test.blend` triggers this assert: ``` Read blend: "/home/guest/blender/main/src/tests/data/modeling/weight-paint_test.blend" Code marked as unreachable has been executed. Please report this as a bug. Error found at source/blender/blenkernel/intern/paint.cc:754 in paint_brush_set_default_reference. ./bin/blender(__interceptor_backtrace+0x5b) [0x11a7d60b] ./bin/blender() [0x17126dca] ./bin/blender() [0x164a8447] ./bin/blender() [0x14296ffd] ./bin/blender() [0x14296db2] ./bin/blender() [0x17b40f3a] ./bin/blender() [0x17b206e7] ./bin/blender() [0x17877ccb] ./bin/blender() [0x1786c645] ./bin/blender() [0x1785ad35] ./bin/blender() [0x120dabd6] ./bin/blender() [0x17535ad1] ./bin/blender() [0x11b128cd] ./bin/blender() [0x11b126ba] ./bin/blender() [0x17194e7e] ./bin/blender() [0x11b11bf0] /lib/x86_64-linux-gnu/libc.so.6(+0x27c8a) [0x7f0e29cd8c8a] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0x85) [0x7f0e29cd8d45] ./bin/blender() [0x11a37ee1] BLI_assert failed: source/blender/blenkernel/intern/paint.cc:754, paint_brush_set_default_reference(), at '0' This line of code is marked to be unreachable. Aborted ```
Bastien Montagne changed title from Opening a testfile triggers a 'unreachable' assert in suclpt/paint code to Opening a testfile triggers an 'unreachable' assert in suclpt/paint code 2024-07-15 12:06:34 +02:00
Sean Kim self-assigned this 2024-07-15 18:28:31 +02:00
Member

Broke in 7b0ea0f1b4, FYI: @JulianEisel

Broke in 7b0ea0f1b4309, FYI: @JulianEisel
Member

Relevant stacktrace

_BLI_assert_abort() (/home/skim/Projects/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:51)
paint_brush_set_default_reference(Paint * paint, const bool do_regular, const bool do_eraser) (/home/skim/Projects/blender-git/blender/source/blender/blenkernel/intern/paint.cc:754)
BKE_paint_brushes_set_default_references(ToolSettings * ts) (/home/skim/Projects/blender-git/blender/source/blender/blenkernel/intern/paint.cc:792)
update_paint_modes_for_brush_assets(Main & bmain) (/home/skim/Projects/blender-git/blender/source/blender/blenloader/intern/versioning_400.cc:2587)
blo_do_versions_400(FileData * fd, Main * bmain) (/home/skim/Projects/blender-git/blender/source/blender/blenloader/intern/versioning_400.cc:4349)
do_versions(FileData * fd, Library * lib, Main * main) (/home/skim/Projects/blender-git/blender/source/blender/blenloader/intern/readfile.cc:3084)
blo_read_file_internal(FileData * fd, const char * filepath) (/home/skim/Projects/blender-git/blender/source/blender/blenloader/intern/readfile.cc:3584)
BLO_read_from_file(const char * filepath, eBLOReadSkip skip_flags, BlendFileReadReport * reports) (/home/skim/Projects/blender-git/blender/source/blender/blenloader/intern/readblenentry.cc:353)
BKE_blendfile_read(const char * filepath, const BlendFileReadParams * params, BlendFileReadReport * reports) (/home/skim/Projects/blender-git/blender/source/blender/blenkernel/intern/blendfile.cc:1285)
WM_file_read(bContext * C, const char * filepath, ReportList * reports) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:1033)
wm_file_read_opwrap(bContext * C, const char * filepath, ReportList * reports) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2890)
wm_open_mainfile__open(bContext * C, wmOperator * op) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:3016)
operator_state_dispatch(bContext * C, wmOperator * op, OperatorDispatchTarget * targets) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2926)
wm_open_mainfile_dispatch(bContext * C, wmOperator * op) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:3037)
wm_open_mainfile__discard_changes(bContext * C, wmOperator * op) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2965)
operator_state_dispatch(bContext * C, wmOperator * op, OperatorDispatchTarget * targets) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2926)
wm_open_mainfile_dispatch(bContext * C, wmOperator * op) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:3037)
Relevant stacktrace ``` _BLI_assert_abort() (/home/skim/Projects/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:51) paint_brush_set_default_reference(Paint * paint, const bool do_regular, const bool do_eraser) (/home/skim/Projects/blender-git/blender/source/blender/blenkernel/intern/paint.cc:754) BKE_paint_brushes_set_default_references(ToolSettings * ts) (/home/skim/Projects/blender-git/blender/source/blender/blenkernel/intern/paint.cc:792) update_paint_modes_for_brush_assets(Main & bmain) (/home/skim/Projects/blender-git/blender/source/blender/blenloader/intern/versioning_400.cc:2587) blo_do_versions_400(FileData * fd, Main * bmain) (/home/skim/Projects/blender-git/blender/source/blender/blenloader/intern/versioning_400.cc:4349) do_versions(FileData * fd, Library * lib, Main * main) (/home/skim/Projects/blender-git/blender/source/blender/blenloader/intern/readfile.cc:3084) blo_read_file_internal(FileData * fd, const char * filepath) (/home/skim/Projects/blender-git/blender/source/blender/blenloader/intern/readfile.cc:3584) BLO_read_from_file(const char * filepath, eBLOReadSkip skip_flags, BlendFileReadReport * reports) (/home/skim/Projects/blender-git/blender/source/blender/blenloader/intern/readblenentry.cc:353) BKE_blendfile_read(const char * filepath, const BlendFileReadParams * params, BlendFileReadReport * reports) (/home/skim/Projects/blender-git/blender/source/blender/blenkernel/intern/blendfile.cc:1285) WM_file_read(bContext * C, const char * filepath, ReportList * reports) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:1033) wm_file_read_opwrap(bContext * C, const char * filepath, ReportList * reports) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2890) wm_open_mainfile__open(bContext * C, wmOperator * op) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:3016) operator_state_dispatch(bContext * C, wmOperator * op, OperatorDispatchTarget * targets) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2926) wm_open_mainfile_dispatch(bContext * C, wmOperator * op) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:3037) wm_open_mainfile__discard_changes(bContext * C, wmOperator * op) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2965) operator_state_dispatch(bContext * C, wmOperator * op, OperatorDispatchTarget * targets) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2926) wm_open_mainfile_dispatch(bContext * C, wmOperator * op) (/home/skim/Projects/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:3037) ```
Member

Not sure I know enough about this area to make a fix, seems like the imapaint.paint runtime data hasn't been initialized yet when this versioning code is being called.

Not sure I know enough about this area to make a fix, seems like the `imapaint.paint` runtime data hasn't been initialized yet when this versioning code is being called.
Sean Kim removed their assignment 2024-07-15 20:05:30 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-07-15 20:25:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#124719
No description provided.