Fix #124719: Failed assert in old (2.34) testfile

Issue happened in very old files only (pre 2.38), where versioning would
allocate tool-settings, without calling initialize logic for painting.
This should be fine, just handle the case properly where initialization
happens later, once the paint mode is actually entered.

Also adds missing default brush setting for this corner-case, where
texture paint data gets initialized only when entering the mode.